--- a/values/alloy.yaml
+++ b/values/alloy.yaml
@@ -88,7 +88,7 @@ alloy:
       loki.process "pod_logs" {
         stage.static_labels {
             values = {
-              cluster = sys.env("CLUSTER"),
+              cluster = "kind-cluster",
             }
         }
 
